--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <h1>Website Under Construction</h1>
             <p>We're working hard to bring you something amazing. Stay tuned!</p>
-            <img src="image1.jpg" alt="Under Construction" />
+            <img src="image1.jpeg" alt="Under Construction" />
             <div class="quote">
                 <!-- JavaScript will populate this with a random quote -->
             </div>
